--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/93e68cbecf.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./index.js"></script>
   </head>
   <body>
   <section>
@@ -62,7 +63,9 @@
                                 <a class="menu__link no-cursor" onclick="closeMenu()">Login</a>
                             </li>
                             <li class="menu__list">
-                                <a class="menu__link" onclick="closeMenu()">Sign Up</a>
+                                <button class="signup" onclick="closeMenu()">
+                                    Sign Up
+                                </button>
                             </li>
                         </ul>
             </div>
