--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <section id="features">
     <div class="container">
             <div class="features__wrapper">
-                <h5>FEATURES</h5>
+                <h5 class="features__subheading">FEATURES</h5>
                 <h2 class="features__heading">We have Amazing <span class="purple">Service.</span></h2>
                 <p class="features__para">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste ad repudiandae eum cumque tempore officia illo quisquam voluptates incidunt!
@@ -198,8 +198,8 @@
             <h2 class="steps__heading">Easy to <span class="purple">Get Started.</span></h2>
             <ul class="steps__lists">
               <li class="steps__list">
-                <div class="steps__number">
-                <span>01</span>
+                <div>
+                <span class="steps__number">01</span>
                 </div>
                 <div class="steps_description">
                 <h6 class="steps__action">Register</h6>
@@ -207,8 +207,8 @@
                 </div>
               </li>
               <li class="steps__list">
-                <div class="steps__number">
-                    <span>02</span>
+                <div>
+                    <span class="steps__number">02</span>
                 </div>
                 <div class="steps_description">
                 <h6 class="steps__action">Download</h6>
@@ -217,7 +217,7 @@
               </li>
               <li class="steps__list">
                 <div class="steps__number">
-                    <span>03</span>
+                    <span >03</span>
                 </div>
                 <div class="steps_description">
                 <h6 class="steps__action">Run</h6>
@@ -305,25 +305,25 @@
                             <span class="feature">12 Internal Pages</span>
                             <span class="feature">Basic Assistance</span>
                         </div>
-                        <div class="plan__action--wrapper">
-                            <button id="personal__action">BUY NOW</button>
+                        <div id="plan__action--wrapper">
+                            <button id="personal__action">BUY <br> NOW</button>
                         </div>
                     </div>
                     <div id="business" class="plan">
-                        <div class="plan__header">
-                            <span class="name">business</span>
-                            <span class="price">$37.99</span>
-                            <span class="duration">MONTHLY</span>
+                        <div id="plan__header">
+                            <span id="name">business</span>
+                            <span id="price">$37.99</span>
+                            <span id="duration">MONTHLY</span>
                         </div>
-                        <div class="plan__features">
-                            <span id="feature" class="main__features">For Small Businesses</span>
+                        <div id="plan__features">
+                            <span id="main__features">For Small <br> Businesses</span>
                             <span id="feature" class="feature">60 Templates</span>
                             <span id="feature" class="feature">15 Landing Pages</span>
                             <span id="feature" class="feature">22 Internal Pages</span>
                             <span id="feature" class="feature">Priority Assistance</span>
                         </div>
                         <div class="plan__action--wrapper">
-                            <button id="business__action">BUY NOW</button>
+                            <button id="business__action">BUY <br> NOW</button>
                         </div>
                     </div>
                     <div id="enterprise" class="plan">
@@ -333,14 +333,14 @@
                             <span class="duration">monthly</span>
                         </div>
                         <div class="plan__features">
-                            <span class="main__features">For Large Companies</span>
+                            <span class="main__features">For Large <br> Companies</span>
                             <span  class="feature">90 Templates</span>
                             <span class="feature">27 Landing Pages</span>
                             <span class="feature">37 Internal Pages</span>
                             <span class="feature">Personal Assistance</span>
                         </div>
                         <div class="plan__action--wrapper">
-                            <button id="enterprise__action">BUY NOW</button>
+                            <button id="enterprise__action">BUY <br> NOW</button>
                         </div>
                     </div>
                 </div>
