--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
                 </div>
               </li>
               <li class="steps__list">
-                <div class="steps__number">
-                    <span >03</span>
+                <div>
+                    <span class="steps__number">03</span>
                 </div>
                 <div class="steps_description">
                 <h6 class="steps__action">Run</h6>
